--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 		<version>3.1.9</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+          <!-- Github polling 	 -->
 	<groupId>com.springboot</groupId>
 	<artifactId>build-ems-rest-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
